--- a/NullaGroupHome/NullaGroupHome/About/Administrator/Introduction/Master_Administrator.master
+++ b/NullaGroupHome/NullaGroupHome/About/Administrator/Introduction/Master_Administrator.master
@@ -1,4 +1,4 @@
-﻿<%@ Master Language="C#" MasterPageFile="~/Master.master" AutoEventWireup="true" CodeBehind="Master_Administrator.master.cs" Inherits="NullaGroupHome.About.Administrator.Introduction.Master_Administrator" %>
+﻿<%@ Master Language="C#" MasterPageFile="~/About/Master_About.master" AutoEventWireup="true" CodeBehind="Master_Administrator.master.cs" Inherits="NullaGroupHome.About.Administrator.Introduction.Master_Administrator" %>
 
 <asp:Content ID="Content1" ContentPlaceHolderID="head" runat="server">
     <asp:ContentPlaceHolder ID="head" runat="server">
@@ -9,7 +9,7 @@
         <asp:ContentPlaceHolder ID="ContentPlaceHolder1" runat="server">
         </asp:ContentPlaceHolder>
         <div id="Text">
-            <footer style="text-align: right; margin-right: 80px"><a href="/About/Members.aspx">&lt;&lt;回到群成员页</a></footer>
+            <footer style="text-align: right; margin-right: 80px"><a href="/About/Members.aspx">回到群成员页</a></footer>
         </div>
     </div>
 </asp:Content>
