--- a/NullaGroupHome/NullaGroupHome/About/Master_About.master
+++ b/NullaGroupHome/NullaGroupHome/About/Master_About.master
@@ -1,7 +1,7 @@
 ﻿<%@ Master Language="C#" MasterPageFile="~/Master.Master" AutoEventWireup="true" CodeBehind="Master_About.master.cs" Inherits="NullaGroupHome.About.Master_About" %>
 
 <asp:Content ID="Content1" ContentPlaceHolderID="head" runat="server">
-    <link rel="stylesheet" href="/About/CSS/Menu.css" type="text/css" />
+    <link rel="stylesheet" href="CSS/Menu.css" type="text/css" />
     <asp:ContentPlaceHolder ID="head" runat="server">
     </asp:ContentPlaceHolder>
 
